--- a/styles/main.css
+++ b/styles/main.css
@@ -32,7 +32,19 @@ html, body {
 .mdl-demo .mdl-layout.is-small-screen .mdl-layout__header-row h3 {
     font-size: inherit;
 }
-
+.mdl-demo .mdl-layout__tab-bar-button {
+  display: none;
+}
+.mdl-demo .mdl-layout.is-small-screen .mdl-layout__tab-bar .mdl-button {
+  display: none;
+}
+.mdl-demo .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar,
+.mdl-demo .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar-container {
+  overflow: visible;
+}
+.mdl-demo .mdl-layout__tab-bar-container {
+  height: 64px;
+}
 .mdl-demo .mdl-layout__tab-bar {
     padding: 0;
     padding-left: 16px;
